# proxy_helper

./: .gitignore  .swiftlint.yml  HISTORY.md  INSTALL.md  LICENSE.txt  Makefile.am  Package.swift  README.md  configure  configure.ac
ManPage/: proxy_helper.8
ManPage_/: proxy_helper.8
Manpage/: proxy_helper.8  proxy_helper.man
Sources/ProxyHelper/: CFNetworkHelper.swift  Console.swift  ConsoleHelper.swift  ConsoleUtils.swift  ConsoleWrapper.swift  ProxyHelper.swift  ProxyHelperCore.swift  ProxyUtils.swift  main.swift
Tests/: LinuxMain.swift
Tests/ProxyHelperTests/: ProxyHelperTests.swift  XCTestManifests.swift
